--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     // Zebra Crossing
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
+
+    // File Chooser
+    compile 'com.nononsenseapps:filepicker:2.5.0'
 }
