--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
 
     // Zebra Crossing
-    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-    compile 'com.google.zxing:core:3.2.1'
-
+    compile files('libs/zxing3.2.jar')
     // File Chooser
     compile 'com.nononsenseapps:filepicker:2.5.0'
 }
