--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,10 @@ repositories {
 }
 
 android {
+    signingConfigs {
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "com.mchacks.qrtransfer"
         minSdkVersion 15
@@ -33,11 +34,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
-
     // Zebra Crossing
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
-
     // File Chooser
     compile 'com.nononsenseapps:filepicker:2.5.0'
 }
