WIP: Added some encoding handling for files.
Will open and incode file a little.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
 
     // File Chooser
     compile 'com.nononsenseapps:filepicker:2.5.0'
+
+    //Google utilities
+    compile 'com.google.guava:guava:19.0'
 }
