--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
 
     //Google utilities
     compile 'com.google.guava:guava:19.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
